# sample-blog-api

./: .gitignore  .travis.yml  MANIFEST.in  Makefile  README.md  fabfile.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: tests.yml
docker/: README.md
docker/pypy/slim/: Dockerfile
docker/pypy2/slim/: Dockerfile
docker/python/alpine/: Dockerfile
docker/python2/alpine/: Dockerfile
docker/python3/alpine/: Dockerfile  config.ini
etc/: config.ini  development.ini
requirements/: dev-py2.txt  dev-py3.txt  dev.in  dev.txt
src/: app.py  config.py  factory.py  lockout.py  tracing.py  urls.py
src/membership/: rules.py  validation.py
src/membership/repository/: caching.py  keys.py  mock.py
src/membership/service/: bridge.py
src/membership/web/: urls.py  views.py
src/posts/: validation.py
src/posts/repository/: caching.py  keys.py  mock.py
src/posts/service/: bridge.py
src/posts/web/: keys.py  profile.py  urls.py  views.py
src/public/: __init__.py
src/public/repository/: caching.py  keys.py  mock.py
src/public/service/: bridge.py
src/public/web/: profile.py  urls.py  views.py
src/shared/: bridge.py  middleware.py  mock.py  views.py
